# My-E-commerce

./: .gitignore  LICENSE  docker-compose.yml
database/: dockerfile
go-backend/: go.mod  go.sum  main.go
go-backend/src/handlers/: products.go  users.go
go-backend/src/middleware/: auth.go  database.go
migrations/2025-02-07-071846_create_users/: up.sql
react-cms/react-cms/: README.MD  package-lock.json  package.json
react-cms/react-cms/src/: App.tsx
react-e-commerce/: index.html  package-lock.json  package.json  vite.config.ts
react-e-commerce/src/: main.tsx
react-e-commerce/src/components/common/: Navbar.tsx  ProductList.tsx
react-e-commerce/src/pages/: Home.tsx
react-e-commerce/src/stores/: Product.tsx  User.tsx
rust-backend/: Cargo.toml  diesel.toml
rust-backend/migrations/2025-02-12-080508_create_products/: up.sql
rust-backend/migrations/2025-02-12-080928_create_cart/: down.sql  up.sql
rust-backend/src/: main.rs
rust-backend/src/db/: ops.rs  schema.rs
rust-backend/src/middleware/: auth.rs
src/: lib.rs  types.rs
src/db/: mod.rs  models.rs  schema.rs
