[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.1"
diesel = { version = "2.2.7", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
password-hash = "0.5.0"
rand_core = "0.9.0"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.39"
thiserror = "2.0.11"

